patch endpoint intial functionality
