# src/domain/model.ts
@@ -70,8 +70,6 @@ const ApplicationSchema = new mongoose.Schema({
     submittedAtUtc: { type: Date, required: false },
     approvedAtUtc: { type: Date, required: false },
     expiresAtUtc: { type: Date, required: false },
-    lastUpdatedAtDate: {type: String, index: true},
-    expiresAtDate: { type: String, index: true },
     closedAtUtc:  { type: Date, required: false },
     closedBy: { type: String, required: false },
     denialReason: { type: String, required: false },
@@ -108,7 +106,7 @@ const ApplicationSchema = new mongoose.Schema({
         meta: Meta,
         title: { type: String, required: false },
         website: { type: String, required: false },
-        abstract: { type: String, required: false },
+        background: { type: String, required: false },
         aims: { type: String, required: false },
         methodology: { type: String, required: false },
         publicationsURLs: { type: [String], required: false },
@@ -116,7 +114,7 @@ const ApplicationSchema = new mongoose.Schema({
       ethicsLetter: {
         meta: Meta,
         declaredAsRequired: { type: Boolean, required: false },
-        approvalLetterDocs: EthicsLetterDocument,
+        approvalLetterDocs: [EthicsLetterDocument],
       },
       ITAgreements: {
         meta: Meta,
@@ -141,26 +139,6 @@ const ApplicationSchema = new mongoose.Schema({
     minimize: false, optimisticConcurrency: true
   },
 );
-
-ApplicationSchema.index({
-  'sections.applicant.info.displayName': 1,
-});
-
-ApplicationSchema.index({
-  'sections.applicant.info.primaryAffiliation': 1,
-});
-
-ApplicationSchema.index({
-  'sections.applicant.info.googleEmail': 1,
-});
-
-ApplicationSchema.index({
-  'lastUpdatedAtDate': 1,
-});
-
-ApplicationSchema.index({
-  'expiresAtDate': 1,
-});
 
 export type ApplicationDocument = mongoose.Document & Application;
 
